<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/search_hint" 
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/search_label"
        android:onClick="onImageSearch" />

    <GridView
        android:id="@+id/gvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btPrevious"
        android:layout_alignLeft="@+id/etQuery"
        android:layout_below="@+id/btnSearch"
        android:numColumns="3" >

    </GridView>

    <Button
        android:id="@+id/btNext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btPrevious"
        android:layout_alignBottom="@+id/btPrevious"
        android:layout_toRightOf="@+id/btPrevious"
        android:text="@string/next" />

    <Button
        android:id="@+id/btPrevious"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gvResults"
        android:layout_alignParentBottom="true"
        android:text="@string/previous" />

</RelativeLayout>
